# kailua

./: .gitignore  .gitmodules  404.html  Cargo.toml  Dockerfile  README.md  design.html  dispute.html  game.html  index.html  introduction.html  justfile  logger.sh  operate.html  parameters.html  print.html  project.html  proposer.html  quickstart.html  rpc.html  searchindex.js  searchindex.json  setup.html  toc.html  toc.js  treasury.html  upgrade.html  validator.html  verifier.html
.github/workflows/: ci.yml  release.yml
bench/: README.md  block_monitor.sh  metrics_20250219.csv  publisher.sh  runner.sh
bench/erc20/: foundry.toml
bench/erc20/script/: TestToken.s.sol
bench/erc20/src/: TestToken.sol
bench/erc20/test/: TestToken.t.sol
book/: book.toml
book/src/: SUMMARY.md  design.md  dispute.md  introduction.md  operate.md  parameters.md  project.md  proposer.md  quickstart.md  rpc.md  setup.md  treasury.md  upgrade.md  validator.md  verifier.md
crates/common/: Cargo.toml
crates/common/src/: blobs.rs  boot.rs  client.rs  config.rs  eigen.rs  executor.rs  hokulea.rs  journal.rs  kona.rs  lib.rs  oracle.rs  precondition.rs  proof.rs  rkyv.rs  witness.rs
crates/common/src/client/: core.rs  mod.rs  stateless.rs  stitching.rs
crates/common/src/eigenda/: cert.rs  commitment.rs  data.rs  mod.rs  provider.rs  source.rs
crates/common/src/kona/: chain.rs  mod.rs  pipeline.rs
crates/common/src/oracle/: map.rs  mod.rs  vec.rs
crates/common/src/rkyv/: execution.rs  kona.rs  kzg.rs  mod.rs  optimism.rs  primitives.rs  vec.rs
crates/common/testdata/: LOG  LOG.old.1747142749024508  LOG.old.1747142757289148  LOG.old.1747197368413513  LOG.old.1747197396332164  LOG.old.1747197652544533  LOG.old.1747198912776250  LOG.old.1747207823680664  LOG.old.1747207886758100  LOG.old.1747207918474205  LOG.old.1747218094230065  MANIFEST-000048
crates/contracts/: Cargo.toml  build.rs
crates/contracts/foundry/: Dockerfile  foundry.toml  justfile
crates/contracts/foundry/lib/forge-std/src/: safeconsole.sol
crates/contracts/foundry/scripts/: Deploy.s.sol  Upgrade.s.sol
crates/contracts/foundry/src/: KailuaAnyTrust.sol  KailuaGame.sol  KailuaLib.sol  KailuaTournament.sol  KailuaTreasury.sol
crates/contracts/foundry/test/: BlobDispute.t.sol  Bond.t.sol  ClaimDispute.t.sol  Costs.t.sol  Deploy.t.sol  Dispute.t.sol  KZG.t.sol  KailuaTest.sol  KailuaTest.t.sol  Propose.t.sol  ScaffoldFactory.sol  ScaffoldPortal.sol
crates/contracts/src/: lib.rs
crates/game/: Cargo.toml
crates/game/src/: lib.rs
crates/hana/: Cargo.toml
crates/hana/src/: da.rs  lib.rs  provider.rs  stitching.rs
crates/hokulea/: Cargo.toml
crates/hokulea/src/: canoe.rs  da.rs  lib.rs  stitching.rs  witness.rs
crates/kona/: Cargo.toml
crates/kona/src/: config.rs  executor.rs  journal.rs  kona.rs  lib.rs  precondition.rs
crates/kona/src/client/: core.rs  stateless.rs  stitching.rs
crates/kona/src/oracle/: local.rs  mod.rs  vec.rs
crates/proposer/: Cargo.toml
crates/proposer/src/: args.rs  propose.rs  resolve.rs
crates/prover/: Cargo.toml  build.rs
crates/prover/src/: args.rs  canoe.rs  config.rs  kv.rs  lib.rs  preflight.rs  proof.rs  prove.rs  tasks.rs
crates/prover/src/backends/: bonsai.rs  boundless.rs  zkvm.rs
crates/prover/src/client/: mod.rs  native.rs  payload.rs  proving.rs  witgen.rs
crates/prover/src/hana/: args.rs  handler.rs  mod.rs  providers.rs  witgen.rs
crates/prover/src/hokulea/: args.rs  canoe.rs  mod.rs  witgen.rs
crates/prover/src/risczero/: bonsai.rs  boundless.rs  mod.rs  zkvm.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: api.rs  args.rs  lib.rs  requests.rs  rpc.rs  sync.rs
crates/sync/: Cargo.toml
crates/sync/src/: agent.rs  args.rs  lib.rs  proposal.rs  retry.rs  telemetry.rs
crates/sync/src/provider/: beacon.rs  mod.rs  optimism.rs
crates/validator/: Cargo.toml
crates/validator/src/: args.rs  channel.rs  proposals.rs  requests.rs  tasks.rs  validate.rs
crates/validator/src/proposals/: devnet.rs  dispatch.rs  mod.rs  processing.rs  receipts.rs  trails.rs
test_token/: README.md  block_monitor.sh  monitor.sh  publisher.sh  runner.sh
test_token/script/: TestToken.s.sol
testdata/16491249/: LOG
testdata/18952109/: IDENTITY  LOG.old.1744736308532380  MANIFEST-000005  params.json
