[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.81"
authors = ["hashcashier"]
homepage = "https://risc0.github.io/kailua/"
repository = "https://github.com/risc0/kailua"
keywords = ["zkvm", "ethereum", "optimism", "fault", "proof"]
categories = ["cryptography", "cryptography::cryptocurrencies"]

[workspace]
resolver = "2"
members = [
    "bin/*",
    "build/*",
    "crates/*",
]

[workspace.dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
bincode = "1.3.3"
bytemuck = "1.12"
bytes = "1.7.2"
clap = { version = "4.5.21", features = ["derive", "env"] }
c-kzg = "=1.0.3"
foundry-compilers = "0.11.0"
hashbrown = { version = "0.15.0", features = ["rayon"] }
hex = "0.4.3"
lazy_static = "1.5.0"
lru = "0.12.4"
pot = "3.0.1"
rkyv = { version = "0.8.9", features = ["hashbrown-0_15", "std"] }
rocksdb = "0.22.0"
semver = "1.0.23"
serde = { version = "1.0", features = ["derive", "alloc", "std"] }
serde_json = "1.0.127"
sha2 = "0.10.8"
spin = { version = "0.9.8", features = ["mutex"] }
tempfile = "3.10.1"
tokio = { version = "1.39.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.4"

# Alloy
alloy = { version = "0.9.2", default-features = false, features = ["json"] }
alloy-chains = "0.1.46"
alloy-consensus = { version = "0.9.2", default-features = false, features = ["serde"] }
alloy-eips = { version = "0.9.2", default-features = false, features = ["kzg"] }
alloy-rlp = "0.3.9"
alloy-primitives = { version = "0.8.18", default-features = false, features = ["map-hashbrown"] }
alloy-rpc-types-beacon = "0.9.2"
alloy-sol-types = { version = "0.8.18", features = ["json"] }

# Maili
maili-genesis = { version = "0.1.5", default-features = false, features = ["serde"] }
maili-protocol = { version = "0.1.5", default-features = false, features = ["serde"] }
maili-registry = { version = "0.1.5", default-features = false, features = ["map-hashbrown"] }
maili-consensus = { version = "0.1.5", default-features = false, features = ["serde"] }

# OP Alloy
op-alloy-consensus = { version = "0.9.4", default-features = false, features = ["serde"] }
op-alloy-rpc-types-engine = { version = "0.9.4", default-features = false, features = ["serde"] }

# Kailua
kailua-build = { path = "build/risczero" }
kailua-client = { path = "bin/client" }
kailua-common = { path = "crates/common" }
kailua-contracts = { path = "crates/contracts" }
kailua-host = { path = "bin/host" }

# Kona
kona-client = { git = "https://github.com/op-rs/kona", rev = "f912b89be07c452da1ee251b7e7c1ba4a50c17d6", default-features = false }
kona-derive = { git = "https://github.com/op-rs/kona", rev = "f912b89be07c452da1ee251b7e7c1ba4a50c17d6", default-features = false, features = ["serde"] }
kona-driver = { git = "https://github.com/op-rs/kona", rev = "f912b89be07c452da1ee251b7e7c1ba4a50c17d6" }
kona-executor = { git = "https://github.com/op-rs/kona", rev = "f912b89be07c452da1ee251b7e7c1ba4a50c17d6" }
kona-host = { git = "https://github.com/op-rs/kona", rev = "f912b89be07c452da1ee251b7e7c1ba4a50c17d6" }
kona-mpt = { git = "https://github.com/op-rs/kona", rev = "f912b89be07c452da1ee251b7e7c1ba4a50c17d6", features = ["serde"] }
kona-preimage = { git = "https://github.com/op-rs/kona", rev = "f912b89be07c452da1ee251b7e7c1ba4a50c17d6", features = ["serde", "rkyv"] }
kona-proof = { git = "https://github.com/op-rs/kona", rev = "f912b89be07c452da1ee251b7e7c1ba4a50c17d6" }
kona-std-fpvm = { git = "https://github.com/op-rs/kona", rev = "f912b89be07c452da1ee251b7e7c1ba4a50c17d6" }

# RISC Zero zkVM
bonsai-sdk = { version = "1.2.0", features = ["non_blocking"] }
boundless-market = "0.4.1"
risc0-aggregation = "0.1.0"
risc0-build = "1.2.0"
risc0-ethereum-contracts = "1.2.0"
risc0-zkvm = { version = "1.2.0", features = ["heap-embedded-alloc", "unstable"] }
risc0-zkvm-platform = { version = "1.2.0", features = ["heap-embedded-alloc"] }

# RISC Zero Zeth
zeth-core = { git = "https://github.com/risc0/zeth", rev = "cecf5ec" }
zeth-core-optimism = { git = "https://github.com/risc0/zeth", rev = "cecf5ec" }
zeth-preflight = { git = "https://github.com/risc0/zeth", rev = "cecf5ec" }
zeth-preflight-optimism = { git = "https://github.com/risc0/zeth", rev = "cecf5ec" }

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug = 1
lto = "fat"

[profile.release.build-override]
codegen-units = 1
opt-level = 3

[patch.crates-io]
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }

[patch.'https://github.com/op-rs/kona']
kona-client = { git = "https://github.com/hashcashier/kona", branch = "rkhalil/rkyv-derive" }
kona-derive = { git = "https://github.com/hashcashier/kona", branch = "rkhalil/rkyv-derive" }
kona-driver = { git = "https://github.com/hashcashier/kona", branch = "rkhalil/rkyv-derive" }
kona-executor = { git = "https://github.com/hashcashier/kona", branch = "rkhalil/rkyv-derive" }
kona-host = { git = "https://github.com/hashcashier/kona", branch = "rkhalil/rkyv-derive" }
kona-mpt = { git = "https://github.com/hashcashier/kona", branch = "rkhalil/rkyv-derive" }
kona-preimage = { git = "https://github.com/hashcashier/kona", branch = "rkhalil/rkyv-derive" }
kona-proof = { git = "https://github.com/hashcashier/kona", branch = "rkhalil/rkyv-derive" }
kona-std-fpvm = { git = "https://github.com/hashcashier/kona", branch = "rkhalil/rkyv-derive" }
