[workspace.package]
version = "1.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.86"
authors = ["hashcashier"]
homepage = "https://risc0.github.io/kailua/"
repository = "https://github.com/risc0/kailua"
keywords = ["zkvm", "ethereum", "optimism", "fault", "proof"]
categories = ["cryptography", "cryptography::cryptocurrencies"]

[workspace]
resolver = "2"
members = [
    "bin/*",
    "build/*",
    "crates/*",
]

[workspace.dependencies]
anyhow = "1.0.98"
async-channel = "2.3.1"
async-trait = "0.1.88"
aws-config = "1.5.15"
aws-sdk-kms = "1.58.0"
aws-sdk-s3 = "1.58.0"
bincode = "1.3.3"
bytemuck = "1.12"
c-kzg = "=2.1.1"
clap = { version = "4.5.21", features = ["derive", "env", "color"] }
copy_dir = "0.1.3"
foundry-compilers = "0.11.0"
futures = "0.3.31"
gcloud-sdk = { version = "0.27.0", features = ["google-cloud-kms-v1"] }
hex = "0.4.3"
human_bytes = "0.4.3"
itertools = "0.14.0"
lazy_static = "1.5.0"
jsonrpsee = { version = "0.25.1", features = ["full"] }
paste = "1.0.15"
pot = "3.0.1"
rand = "0.9.2"
rayon = "1.10.0"
reqwest = { version = "0.12.12", features = ["json"] }
rkyv = { version = "0.8.9", features = ["hashbrown-0_15", "std"] }
rocksdb = "0.23.0"
serde = { version = "1.0", features = ["derive", "alloc", "std"] }
serde_json = "1.0.127"
spin = { version = "0.10.0", features = ["mutex"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.39.1", features = ["full"] }
tokio-retry = "0.3.0"

# Telemetry
opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27.0", features = ["tonic"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Alloy
alloy = { version = "1.0.9", default-features = false, features = ["json"] }
alloy-consensus = { version = "1.0.9", default-features = false, features = ["serde"] }
alloy-eips = { version = "1.0.9", default-features = false, features = ["kzg"] }
alloy-evm = { version = "0.10.0", default-features = false, features = ["op"] }
alloy-op-evm = { version = "0.10.0", default-features = false }
alloy-rlp = "0.3.12"
alloy-primitives = { version = "1.1.2", default-features = false, features = ["map-hashbrown"] }
alloy-rpc-types-beacon = "1.0.9"
alloy-rpc-types-engine = { version = "1.0.9", default-features = false }
alloy-trie = { version = "0.8.1", default-features = false, features = ["std", "ethereum"] }

# OP Alloy
op-alloy-consensus = { version = "0.17.2", default-features = false, features = ["serde"] }
op-alloy-rpc-types-engine = { version = "0.17.2", default-features = false, features = ["serde"] }
op-alloy-network = { version = "0.17.2", default-features = false, features = ["serde"] }

# Kailua
kailua-build = { path = "build/risczero" }
kailua-kona = { path = "crates/kona" }
kailua-hokulea = { path = "crates/hokulea" }
kailua-hana = { path = "crates/hana" }
kailua-contracts = { path = "crates/contracts" }
kailua-proposer = { path = "crates/proposer" }
kailua-prover = { path = "crates/prover" }
kailua-rpc = { path = "crates/rpc" }
kailua-sync = { path = "crates/sync" }
kailua-validator = { path = "crates/validator" }

# Kona git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2"
kona-cli = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", default-features = false }
kona-derive = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", default-features = false, features = ["serde"] }
kona-driver = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2" }
kona-executor = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2" }
kona-genesis = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2" }
kona-host = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", default-features = false, features = ["single"] }
kona-mpt = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", features = ["serde"] }
kona-preimage = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", features = ["serde", "rkyv", "std"] }
kona-proof = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2" }
kona-protocol = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2" }
kona-providers-alloy = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2" }
kona-registry = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2" }
kona-std-fpvm = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2" }

# Hokulea git = "https://github.com/Layr-Labs/hokulea", rev = "ed038f498a942f53f2d5218e26125aed7980f9cc"
canoe-bindings = { git = "https://github.com/Layr-Labs/hokulea", rev = "ed038f498a942f53f2d5218e26125aed7980f9cc" }
canoe-provider = { git = "https://github.com/Layr-Labs/hokulea", rev = "ed038f498a942f53f2d5218e26125aed7980f9cc" }
canoe-steel-methods = { git = "https://github.com/Layr-Labs/hokulea", rev = "ed038f498a942f53f2d5218e26125aed7980f9cc" }
eigenda-cert = { git = "https://github.com/Layr-Labs/hokulea", rev = "ed038f498a942f53f2d5218e26125aed7980f9cc" }
hokulea-host-bin = { git = "https://github.com/Layr-Labs/hokulea", rev = "ed038f498a942f53f2d5218e26125aed7980f9cc", default-features = false }
hokulea-eigenda = { git = "https://github.com/Layr-Labs/hokulea", rev = "ed038f498a942f53f2d5218e26125aed7980f9cc", default-features = false }
hokulea-proof = { git = "https://github.com/Layr-Labs/hokulea", rev = "ed038f498a942f53f2d5218e26125aed7980f9cc", default-features = false }
hokulea-witgen = { git = "https://github.com/Layr-Labs/hokulea", rev = "ed038f498a942f53f2d5218e26125aed7980f9cc", default-features = false }

# Hana git = "https://github.com/celestiaorg/hana", tag = "v0.1.0-beta.17"
celestia-rpc = "0.11.3"
celestia-types = "0.13.0"
hana-blobstream = { git = "https://github.com/celestiaorg/hana", tag = "v0.1.0-beta.17", default-features = false }
hana-celestia = { git = "https://github.com/celestiaorg/hana", tag = "v0.1.0-beta.17", default-features = false }
hana-host = { git = "https://github.com/celestiaorg/hana", tag = "v0.1.0-beta.17", default-features = false }
hana-oracle = { git = "https://github.com/celestiaorg/hana", tag = "v0.1.0-beta.17", default-features = false }


# Bonsai
bonsai-sdk = { version = "1.4.0", features = ["non_blocking"] }

# RISC Zero
risc0-build = { version = "2.3.1", features = ["unstable"] }
risc0-circuit-recursion = "3.0.0"
risc0-ethereum-contracts = "2.2.2"
risc0-zkvm = { version = "2.3.1", features = ["heap-embedded-alloc", "unstable"] }

# Boundless
boundless-market = "0.12.1"

# STEEL
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum.git", tag = "v2.2.2" }

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug = 1
lto = "fat"
overflow-checks = true

[profile.release.build-override]
codegen-units = 1
opt-level = 3
