[package]
name = "kailua-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
bytemuck.workspace = true
c-kzg.workspace = true
hashbrown.workspace = true
lazy_static.workspace = true
lru.workspace = true
pot.workspace = true
rkyv.workspace = true
spin.workspace = true

alloy-consensus = { workspace = true, features = ["serde"] }
alloy-eips.workspace = true
alloy-rlp.workspace = true
alloy-primitives = { workspace = true, features = ["map-hashbrown"] }
alloy-rpc-types-beacon.workspace = true

maili-genesis = { workspace = true, features = ["serde"] }
maili-protocol = { workspace = true, features = ["serde"] }

op-alloy-consensus = { workspace = true, features = ["serde"] }
op-alloy-rpc-types-engine = { workspace = true, features = ["serde"] }

kona-driver.workspace = true
kona-derive.workspace = true
kona-executor.workspace = true
kona-mpt.workspace = true
kona-preimage = { workspace = true, features = ["serde"] }
kona-proof.workspace = true

risc0-zkvm.workspace = true
risc0-zkvm-platform.workspace = true

serde.workspace = true
tracing.workspace = true