[package]
name = "kailua-hokulea"
version = "1.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.86"
authors = ["hashcashier"]
homepage = "https://risc0.github.io/kailua/"
repository = "https://github.com/risc0/kailua"
keywords = ["zkvm", "ethereum", "optimism", "fault", "proof"]
categories = ["cryptography", "cryptography::cryptocurrencies"]

[dependencies]
kailua-kona.workspace = true

serde_json.workspace = true

alloy-primitives.workspace = true

kona-derive.workspace = true
kona-genesis.workspace = true
kona-preimage.workspace = true
kona-proof.workspace = true

risc0-zkvm.workspace = true

eigenda-cert.workspace = true
hokulea-eigenda.workspace = true
hokulea-proof.workspace = true
