[package]
name = "kailua-prover"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
async-trait.workspace = true
bincode.workspace = true
bytemuck.workspace = true
c-kzg.workspace = true
clap.workspace = true
hex.workspace = true
human_bytes.workspace = true
lazy_static.workspace = true
rkyv.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-retry.workspace = true

alloy = { workspace = true, features = ["full", "kzg"] }
alloy-primitives = { workspace = true, features = ["map-hashbrown"] }

kailua-build.workspace = true
kailua-kona.workspace = true
kailua-hokulea.workspace = true
kailua-sync.workspace = true

kona-derive.workspace = true
kona-genesis.workspace = true
kona-host.workspace = true
kona-registry.workspace = true
kona-preimage.workspace = true
kona-proof.workspace = true
kona-protocol.workspace = true
kona-std-fpvm.workspace = true

canoe-bindings.workspace = true
canoe-provider.workspace = true
canoe-steel-apps.workspace = true
canoe-steel-methods.workspace = true
eigenda-cert.workspace = true
hokulea-eigenda.workspace = true
hokulea-host-bin.workspace = true
hokulea-proof.workspace = true
hokulea-witgen.workspace = true

bonsai-sdk.workspace = true
boundless-market.workspace = true

opentelemetry.workspace = true

risc0-ethereum-contracts.workspace = true
risc0-zkvm.workspace = true

risc0-steel.workspace = true

[features]
devnet = [
    "kailua-sync/devnet"
]
prove = [
    "risc0-zkvm/prove"
]
cuda = [
    "risc0-zkvm/cuda"
]
metal = [
    "risc0-zkvm/metal"
]
disable-dev-mode = [
    "kailua-build/disable-dev-mode",
    "risc0-zkvm/disable-dev-mode"
]
rebuild-fpvm = [
    "kailua-build/rebuild-fpvm",
    "kailua-sync/rebuild-fpvm"
]
eigen-da = []
