[package]
name = "kailua-prover"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
bincode.workspace = true
bytemuck.workspace = true
c-kzg.workspace = true
clap.workspace = true
hex.workspace = true
human_bytes.workspace = true
lazy_static.workspace = true
rkyv.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-retry.workspace = true

alloy = { workspace = true, features = ["full", "kzg", "contract", "rlp", "sol-types"] }
alloy-primitives = { workspace = true, features = ["map-hashbrown"] }

op-alloy-network.workspace = true

kailua-build.workspace = true
kailua-kona.workspace = true
kailua-hokulea.workspace = true
kailua-hana.workspace = true
kailua-sync.workspace = true

kona-derive.workspace = true
kona-genesis.workspace = true
kona-host.workspace = true
kona-registry.workspace = true
kona-preimage.workspace = true
kona-proof.workspace = true
kona-protocol.workspace = true
kona-providers-alloy.workspace = true
kona-std-fpvm.workspace = true

canoe-bindings.workspace = true
canoe-provider.workspace = true
hokulea-host-bin.workspace = true
hokulea-proof.workspace = true
hokulea-witgen.workspace = true

celestia-rpc.workspace = true
celestia-types.workspace = true
hana-blobstream.workspace = true
hana-host.workspace = true
hana-oracle.workspace = true

bonsai-sdk.workspace = true
boundless-market.workspace = true

opentelemetry.workspace = true

risc0-ethereum-contracts.workspace = true
risc0-zkvm.workspace = true

risc0-steel = { workspace = true, features = ["host"] }

[features]
devnet = [
    "kailua-sync/devnet"
]
prove = [
    "risc0-zkvm/prove"
]
cuda = [
    "risc0-zkvm/cuda"
]
metal = [
    "risc0-zkvm/metal"
]
disable-dev-mode = [
    "kailua-build/disable-dev-mode",
    "risc0-zkvm/disable-dev-mode"
]
rebuild-fpvm = [
    "kailua-build/rebuild-fpvm",
    "kailua-sync/rebuild-fpvm"
]
